--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
@@ -96,15 +96,12 @@
     <!-- /.section -->
     <div class="section">
       <h2 class="sectionHeading--h2">h2テキストテキストテキストテキストテキストテキスト</h2>
-      <!-- /.sectionHeading--h2 -->
       <div class="gridCont">
         <div class="grid__span--6">
           <p class="sectionText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum cupiditate commodi soluta voluptatum vero magni atque ad molestias temporibus laborum dolore veritatis beatae nostrum cum maiores aut in minus?</p>
           <p class="sectionText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum cupiditate commodi soluta voluptatum vero magni atque ad molestias temporibus laborum dolore veritatis beatae nostrum cum maiores aut in minus?</p>
         </div>
-        <!-- /.grid__span--6 -->
         <div class="grid__span--6"><img src="img/sample_01.jpg" height="309" width="460" alt=""><p class="captionText">キャプション</p></div>
-        <!-- /.grid__span--6 -->
       </div>
       <!-- /.gridCont -->
     </div>
@@ -112,15 +109,12 @@
 
     <div class="section">
       <h2 class="sectionHeading--h2">h2テキストテキストテキストテキストテキストテキスト</h2>
-      <!-- /.sectionHeading--h2 -->
       <div class="gridCont">
         <div class="grid__span--6 grid__span--op"><img src="img/sample_01.jpg" height="309" width="460" alt=""><p class="captionText">この画像はタブレット・スマートフォンで上に来ます</p></div>
-        <!-- /.grid__span--6 -->
         <div class="grid__span--6">
           <p class="sectionText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum cupiditate commodi soluta voluptatum vero magni atque ad molestias temporibus laborum dolore veritatis beatae nostrum cum maiores aut in minus?</p>
           <p class="sectionText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum cupiditate commodi soluta voluptatum vero magni atque ad molestias temporibus laborum dolore veritatis beatae nostrum cum maiores aut in minus?</p>
         </div>
-        <!-- /.grid__span--6 -->
       </div>
       <!-- /.gridCont -->
     </div>
@@ -128,7 +122,6 @@
 
     <div class="section">
       <h3 class="sectionHeading--h3">h3テキストテキストテキストテキスト</h3>
-      <!-- /.sectionHeading--h3 -->
       <div class="gridCont">
         <div class="grid__span--4"><img src="img/sample_02.jpg" alt=""></div>
         <div class="grid__span--4"><img src="img/sample_03.jpg" alt=""></div>
@@ -139,7 +132,6 @@
 
     <div class="section">
       <h4 class="sectionHeading--h4">h4テキストテキストテキストテキスト</h4>
-      <!-- /.sectionHeading--h4 -->
       <div class="gridCont">
         <div class="grid__span--3">
           <img src="img/sample_05.jpg" alt="">
@@ -148,7 +140,6 @@
           <p class="sectionText--small">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
           <!-- /.sectionText -->
         </div>
-        <!-- /.grid__span--3 span--box -->
         <div class="grid__span--3">
           <img src="img/sample_06.jpg" alt="">
           <p class="spanBox__title">テキストテキスト</p>
@@ -156,7 +147,6 @@
           <p class="sectionText--small">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
           <!-- /.sectionText -->
         </div>
-        <!-- /.grid__span--3 span--box -->
         <div class="grid__span--3">
           <img src="img/sample_07.jpg" alt="">
           <p class="spanBox__title">テキストテキスト</p>
@@ -164,7 +154,6 @@
           <p class="sectionText--small">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
           <!-- /.sectionText -->
         </div>
-        <!-- /.grid__span--3 span--box -->
         <div class="grid__span--3">
           <img src="img/sample_08.jpg" alt="">
           <p class="spanBox__title">テキストテキスト</p>
@@ -172,7 +161,6 @@
           <p class="sectionText--small">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
           <!-- /.sectionText -->
         </div>
-        <!-- /.grid__span--3 span--box -->
       </div>
       <!-- /.gridCont -->
     </div>
@@ -198,7 +186,6 @@
         <div class="bannerArea__span"><a href=""><img src="common/img/bn-l.png" alt=""></a></div>
         <!-- /.bannerArea__span -->
         <div class="bannerArea__span"><a href=""><img src="common/img/bn-l.png" alt=""></a></div>
-        <!-- /.bannerArea--span -->
       </div>
       <!-- /.bannerArea -->
     </div>
