--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <link rel="canonical" href="" />
+  <?php
+  $url = (empty($_SERVER["HTTPS"]) ? "http://" : "https://") . $_SERVER["HTTP_HOST"] . $_SERVER["REQUEST_URI"];
+  echo '<link rel="canonical" href="'.$url.'" />'
+  ?>
   <link rel="stylesheet" href="common/css/style.css">
   <link rel="stylesheet" href="common/Glide.js-master/dist/css/style.css">
   <link rel="stylesheet" href="common/font-awesome-4.3.0/css/font-awesome.css">
