--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=yes" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
@@ -13,7 +13,7 @@
   ?>
   <link rel="stylesheet" href="common/css/style.css">
   <link rel="stylesheet" href="common/Glide.js-master/dist/css/style.css">
-  <link rel="stylesheet" href="common/font-awesome-4.3.0/css/font-awesome.css">
+  <link rel="stylesheet" href="common/font-awesome-4.4.0/css/font-awesome.css">
   <script type="text/javascript" src="common/js/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="common/js/script.min.js"></script>
   <script type="text/javascript" src="common/js/jquery.matchHeight.js"></script>
@@ -52,21 +52,21 @@
   <div class="globalNav">
     <div class="globalNav__open" id="js-navOpen"><i class="fa fa-bars"></i></div>
     <ul class="globalNav__list">
-      <li class="globalNav__listItem globalNav__close" id="js-navClose"><i class="fa fa-times"></i></li>
-      <li class="globalNav__listItem"><a href="">メニュー1</a></li>
-      <!-- /.globalNav__listItem -->
-      <li class="globalNav__listItem"><a href="">メニュー2</a></li>
-      <!-- /.globalNav__listItem -->
-      <li class="globalNav__listItem"><a href="">メニュー3</a></li>
-      <!-- /.globalNav__listItem -->
-      <li class="globalNav__listItem"><a href="">メニュー4</a></li>
-      <!-- /.globalNav__listItem -->
-      <li class="globalNav__listItem"><a href="">メニュー5</a></li>
-      <!-- /.globalNav__listItem -->
-      <li class="globalNav__listItem"><a href="">メニュー6</a></li>
-      <!-- /.globalNav__listItem -->
-      <li class="globalNav__listItem globalNav__listItem--half"><a href="tel:0000000000"><i class="fa fa-phone"></i></a></li>
-      <li class="globalNav__listItem globalNav__listItem--half"><a href=""><i class="fa fa-envelope"></i></a></li>
+      <li class="globalNav__list__item globalNav__close" id="js-navClose"><i class="fa fa-times"></i></li>
+      <li class="globalNav__list__item"><a href="">メニュー1</a></li>
+      <!-- /.globalNav__list__item -->
+      <li class="globalNav__list__item"><a href="">メニュー2</a></li>
+      <!-- /.globalNav__list__item -->
+      <li class="globalNav__list__item"><a href="">メニュー3</a></li>
+      <!-- /.globalNav__list__item -->
+      <li class="globalNav__list__item"><a href="">メニュー4</a></li>
+      <!-- /.globalNav__list__item -->
+      <li class="globalNav__list__item"><a href="">メニュー5</a></li>
+      <!-- /.globalNav__list__item -->
+      <li class="globalNav__list__item"><a href="">メニュー6</a></li>
+      <!-- /.globalNav__list__item -->
+      <li class="globalNav__list__item globalNav__list__item--half"><a href="tel:0000000000"><i class="fa fa-phone"></i></a></li>
+      <li class="globalNav__list__item globalNav__list__item--half"><a href=""><i class="fa fa-envelope"></i></a></li>
     </ul>
     <!-- /.globalNav__list -->
   </div>
@@ -83,9 +83,9 @@
 
   <div class="breadCrumbs">
     <ul class="breadCrumbs__list">
-      <li class="breadCrumbs__listItem"><a href="">HOME</a></li>
-      <li class="breadCrumbs__listItem"><a href="">foo</a></li>
-      <li class="breadCrumbs__listItem">bar</li>
+      <li class="breadCrumbs__list__item"><a href="">HOME</a></li>
+      <li class="breadCrumbs__list__item"><a href="">foo</a></li>
+      <li class="breadCrumbs__list__item">bar</li>
     </ul>
   </div>
   <!-- /.breadCrumbs -->
@@ -202,18 +202,18 @@
     <div class="footer__inner">
       <div class="footer__nav">
         <ul class="footer__nav__list">
-          <li class="footer__nav__listItem"><a href="">メニュー1</a></li>
-          <!-- /.footer__nav__listItem -->
-          <li class="footer__nav__listItem"><a href="">メニュー2</a></li>
-          <!-- /.footer__nav__listItem -->
-          <li class="footer__nav__listItem"><a href="">メニュー3</a></li>
-          <!-- /.footer__nav__listItem -->
-          <li class="footer__nav__listItem"><a href="">メニュー4</a></li>
-          <!-- /.footer__nav__listItem -->
-          <li class="footer__nav__listItem"><a href="">メニュー5</a></li>
-          <!-- /.footer__nav__listItem -->
-          <li class="footer__nav__listItem"><a href="">メニュー6</a></li>
-          <!-- /.footer__nav__listItem -->
+          <li class="footer__nav__list__item"><a href="">メニュー1</a></li>
+          <!-- /.footer__nav__list__item -->
+          <li class="footer__nav__list__item"><a href="">メニュー2</a></li>
+          <!-- /.footer__nav__list__item -->
+          <li class="footer__nav__list__item"><a href="">メニュー3</a></li>
+          <!-- /.footer__nav__list__item -->
+          <li class="footer__nav__list__item"><a href="">メニュー4</a></li>
+          <!-- /.footer__nav__list__item -->
+          <li class="footer__nav__list__item"><a href="">メニュー5</a></li>
+          <!-- /.footer__nav__list__item -->
+          <li class="footer__nav__list__item"><a href="">メニュー6</a></li>
+          <!-- /.footer__nav__list__item -->
         </ul>
         <!-- /.footer__nav__list -->
       </div>
