BEMでの記述が根本的に誤っていたので修正 （block__block__element→block__elementなど）

--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
   <div class="globalNav">
     <div class="globalNav__open" id="js-navOpen"><i class="fa fa-bars"></i></div>
     <ul class="globalNav__list">
-      <li class="globalNav__list__item globalNav__close" id="js-navClose"><i class="fa fa-times"></i></li>
-      <li class="globalNav__list__item"><a href="">メニュー1</a></li>
-      <!-- /.globalNav__list__item -->
-      <li class="globalNav__list__item"><a href="">メニュー2</a></li>
-      <!-- /.globalNav__list__item -->
-      <li class="globalNav__list__item"><a href="">メニュー3</a></li>
-      <!-- /.globalNav__list__item -->
-      <li class="globalNav__list__item"><a href="">メニュー4</a></li>
-      <!-- /.globalNav__list__item -->
-      <li class="globalNav__list__item"><a href="">メニュー5</a></li>
-      <!-- /.globalNav__list__item -->
-      <li class="globalNav__list__item"><a href="">メニュー6</a></li>
-      <!-- /.globalNav__list__item -->
-      <li class="globalNav__list__item globalNav__list__item--half"><a href="tel:0000000000"><i class="fa fa-phone"></i></a></li>
-      <li class="globalNav__list__item globalNav__list__item--half"><a href=""><i class="fa fa-envelope"></i></a></li>
+      <li class="globalNav__listItem globalNav__close" id="js-navClose"><i class="fa fa-times"></i></li>
+      <li class="globalNav__listItem"><a href="">メニュー1</a></li>
+      <!-- /.globalNav__listItem -->
+      <li class="globalNav__listItem"><a href="">メニュー2</a></li>
+      <!-- /.globalNav__listItem -->
+      <li class="globalNav__listItem"><a href="">メニュー3</a></li>
+      <!-- /.globalNav__listItem -->
+      <li class="globalNav__listItem"><a href="">メニュー4</a></li>
+      <!-- /.globalNav__listItem -->
+      <li class="globalNav__listItem"><a href="">メニュー5</a></li>
+      <!-- /.globalNav__listItem -->
+      <li class="globalNav__listItem"><a href="">メニュー6</a></li>
+      <!-- /.globalNav__listItem -->
+      <li class="globalNav__listItem globalNav__listItem--half"><a href="tel:0000000000"><i class="fa fa-phone"></i></a></li>
+      <li class="globalNav__listItem globalNav__listItem--half"><a href=""><i class="fa fa-envelope"></i></a></li>
     </ul>
     <!-- /.globalNav__list -->
   </div>
@@ -82,9 +82,9 @@
 
   <div class="breadCrumbs">
     <ul class="breadCrumbs__list">
-      <li class="breadCrumbs__list__item"><a href="">HOME</a></li>
-      <li class="breadCrumbs__list__item"><a href="">foo</a></li>
-      <li class="breadCrumbs__list__item">bar</li>
+      <li class="breadCrumbs__listItem"><a href="">HOME</a></li>
+      <li class="breadCrumbs__listItem"><a href="">foo</a></li>
+      <li class="breadCrumbs__listItem">bar</li>
     </ul>
   </div>
   <!-- /.breadCrumbs -->
@@ -92,16 +92,16 @@
     <div class="section">
       <h1 class="pageTitle">h1テキストテキストテキストテキストテキスト</h1>
       <!-- /.pageTitle -->
-      <p class="sectionText">ここも生涯いくらこの講演通りというのの中がするたた。もとより場合が自覚院はちょうどこの活動ないですぐらいでできとならあるには学習出たらなて、もう少しにもなっないだろなない。画でしませものはとこう当時にしかるにですましあり。何しろ岡田さんが経過画ちょっと説明をありた手その心ここか話がってお刺戟たたたですて、その多数もそこか傾向いを限らて、大森さんのものに自分の私とまあご附随とするからそこ血にご吹聴で妨げようと依然としてお周旋に得あるんて、すでにのらくら帰着を云っですて来ませのにするなけれでしょ。またまたご風俗に認めのはぴたり心的と考えるですが、その主義をもなっだからとしてらに説きていたです。</p>
-      <p class="sectionText">ここも生涯いくらこの講演通りというのの中がするたた。もとより場合が自覚院はちょうどこの活動ないですぐらいでできとならあるには学習出たらなて、もう少しにもなっないだろなない。画でしませものはとこう当時にしかるにですましあり。何しろ岡田さんが経過画ちょっと説明をありた手その心ここか話がってお刺戟たたたですて、その多数もそこか傾向いを限らて、大森さんのものに自分の私とまあご附随とするからそこ血にご吹聴で妨げようと依然としてお周旋に得あるんて、すでにのらくら帰着を云っですて来ませのにするなけれでしょ。またまたご風俗に認めのはぴたり心的と考えるですが、その主義をもなっだからとしてらに説きていたです。</p>
+      <p class="paragraph">ここも生涯いくらこの講演通りというのの中がするたた。もとより場合が自覚院はちょうどこの活動ないですぐらいでできとならあるには学習出たらなて、もう少しにもなっないだろなない。画でしませものはとこう当時にしかるにですましあり。何しろ岡田さんが経過画ちょっと説明をありた手その心ここか話がってお刺戟たたたですて、その多数もそこか傾向いを限らて、大森さんのものに自分の私とまあご附随とするからそこ血にご吹聴で妨げようと依然としてお周旋に得あるんて、すでにのらくら帰着を云っですて来ませのにするなけれでしょ。またまたご風俗に認めのはぴたり心的と考えるですが、その主義をもなっだからとしてらに説きていたです。</p>
+      <p class="paragraph">ここも生涯いくらこの講演通りというのの中がするたた。もとより場合が自覚院はちょうどこの活動ないですぐらいでできとならあるには学習出たらなて、もう少しにもなっないだろなない。画でしませものはとこう当時にしかるにですましあり。何しろ岡田さんが経過画ちょっと説明をありた手その心ここか話がってお刺戟たたたですて、その多数もそこか傾向いを限らて、大森さんのものに自分の私とまあご附随とするからそこ血にご吹聴で妨げようと依然としてお周旋に得あるんて、すでにのらくら帰着を云っですて来ませのにするなけれでしょ。またまたご風俗に認めのはぴたり心的と考えるですが、その主義をもなっだからとしてらに説きていたです。</p>
     </div>
     <!-- /.section -->
     <div class="section">
       <h2 class="sectionHeading--h2">h2テキストテキストテキストテキストテキストテキスト</h2>
       <div class="gridCont">
         <div class="grid__span--6">
-          <p class="sectionText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum cupiditate commodi soluta voluptatum vero magni atque ad molestias temporibus laborum dolore veritatis beatae nostrum cum maiores aut in minus?</p>
-          <p class="sectionText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum cupiditate commodi soluta voluptatum vero magni atque ad molestias temporibus laborum dolore veritatis beatae nostrum cum maiores aut in minus?</p>
+          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum cupiditate commodi soluta voluptatum vero magni atque ad molestias temporibus laborum dolore veritatis beatae nostrum cum maiores aut in minus?</p>
+          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum cupiditate commodi soluta voluptatum vero magni atque ad molestias temporibus laborum dolore veritatis beatae nostrum cum maiores aut in minus?</p>
         </div>
         <div class="grid__span--6"><img src="img/sample_01.jpg" height="309" width="460" alt=""><p class="captionText">キャプション</p></div>
       </div>
@@ -114,8 +114,8 @@
       <div class="gridCont">
         <div class="grid__span--6 grid__span--op"><img src="img/sample_01.jpg" height="309" width="460" alt=""><p class="captionText">この画像はタブレット・スマートフォンで上に来ます</p></div>
         <div class="grid__span--6">
-          <p class="sectionText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum cupiditate commodi soluta voluptatum vero magni atque ad molestias temporibus laborum dolore veritatis beatae nostrum cum maiores aut in minus?</p>
-          <p class="sectionText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum cupiditate commodi soluta voluptatum vero magni atque ad molestias temporibus laborum dolore veritatis beatae nostrum cum maiores aut in minus?</p>
+          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum cupiditate commodi soluta voluptatum vero magni atque ad molestias temporibus laborum dolore veritatis beatae nostrum cum maiores aut in minus?</p>
+          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae dolorum cupiditate commodi soluta voluptatum vero magni atque ad molestias temporibus laborum dolore veritatis beatae nostrum cum maiores aut in minus?</p>
         </div>
       </div>
       <!-- /.gridCont -->
@@ -139,29 +139,29 @@
           <img src="img/sample_05.jpg" alt="">
           <p class="spanBox__title">テキストテキスト</p>
           <!-- /.spanBox__title -->
-          <p class="sectionText--small">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-          <!-- /.sectionText -->
+          <p class="paragraph--small">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          <!-- /.paragraph -->
         </div>
         <div class="grid__span--3">
           <img src="img/sample_06.jpg" alt="">
           <p class="spanBox__title">テキストテキスト</p>
           <!-- /.spanBox__title -->
-          <p class="sectionText--small">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-          <!-- /.sectionText -->
+          <p class="paragraph--small">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          <!-- /.paragraph -->
         </div>
         <div class="grid__span--3">
           <img src="img/sample_07.jpg" alt="">
           <p class="spanBox__title">テキストテキスト</p>
           <!-- /.spanBox__title -->
-          <p class="sectionText--small">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-          <!-- /.sectionText -->
+          <p class="paragraph--small">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          <!-- /.paragraph -->
         </div>
         <div class="grid__span--3">
           <img src="img/sample_08.jpg" alt="">
           <p class="spanBox__title">テキストテキスト</p>
           <!-- /.spanBox__title -->
-          <p class="sectionText--small">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
-          <!-- /.sectionText -->
+          <p class="paragraph--small">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+          <!-- /.paragraph -->
         </div>
       </div>
       <!-- /.gridCont -->
@@ -200,21 +200,21 @@
   <div class="footer">
     <div class="footer__inner">
       <div class="footer__nav">
-        <ul class="footer__nav__list">
-          <li class="footer__nav__list__item"><a href="">メニュー1</a></li>
-          <!-- /.footer__nav__list__item -->
-          <li class="footer__nav__list__item"><a href="">メニュー2</a></li>
-          <!-- /.footer__nav__list__item -->
-          <li class="footer__nav__list__item"><a href="">メニュー3</a></li>
-          <!-- /.footer__nav__list__item -->
-          <li class="footer__nav__list__item"><a href="">メニュー4</a></li>
-          <!-- /.footer__nav__list__item -->
-          <li class="footer__nav__list__item"><a href="">メニュー5</a></li>
-          <!-- /.footer__nav__list__item -->
-          <li class="footer__nav__list__item"><a href="">メニュー6</a></li>
-          <!-- /.footer__nav__list__item -->
+        <ul class="footerNav__list">
+          <li class="footerNav__listItem"><a href="">メニュー1</a></li>
+          <!-- /.footerNav__listItem -->
+          <li class="footerNav__listItem"><a href="">メニュー2</a></li>
+          <!-- /.footerNav__listItem -->
+          <li class="footerNav__listItem"><a href="">メニュー3</a></li>
+          <!-- /.footerNav__listItem -->
+          <li class="footerNav__listItem"><a href="">メニュー4</a></li>
+          <!-- /.footerNav__listItem -->
+          <li class="footerNav__listItem"><a href="">メニュー5</a></li>
+          <!-- /.footerNav__listItem -->
+          <li class="footerNav__listItem"><a href="">メニュー6</a></li>
+          <!-- /.footerNav__listItem -->
         </ul>
-        <!-- /.footer__nav__list -->
+        <!-- /.footerNav__list -->
       </div>
       <!-- /.footer__nav -->
       <div class="footer__corpInfo">
